# knox

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  biome.json  components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  ocr-libs.yml  release.yml
docs/: BUILDING_STATIC_LIBS.md  architecture.md  dev-plan.md  spec.md  state-of-knox.md
docs/specs/: commands.md  data-flow.md  events.md  roadmap.md
docs/specs/backend/: history.md  queue.md  security.md
docs/specs/backend/ocr-engine/: config.md  image.md  ingest.md  ocr.md  overview.md  pdf.md  progress.md  render.md  runtime.md
docs/specs/tests/: backend.md  frontend.md
docs/specs/ui/: advanced-options.md  app.md  file-dropzone.md  header.md  log-panel.md  output-directory.md  queue-view.md
scripts/: build-tesseract-static.sh  download-ocr-libs.sh  download-pdfium.sh  test-update-server.sh
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: .gitignore  Cargo.toml  Info.plist  PLAN.md  build.rs  tauri.conf.json  vcpkg.json
src-tauri/benches/: preprocessing.rs
src-tauri/capabilities/: default.json  dialog.json
src-tauri/icons/: icon.icns
src-tauri/icons/KnoxIcon.icon/: icon.json
src-tauri/resources/: Assets.car  KnoxIcon.icns  assetcatalog_generated_info.plist
src-tauri/src/: commands.rs  history.rs  lib.rs  main.rs  queue.rs  security.rs
src-tauri/src/ocr_engine/: config.rs  engine.rs  error.rs  image.rs  ingest.rs  mod.rs  ocr.rs  pdf.rs  progress.rs  render.rs  runtime.rs  tests.rs  types.rs
src-tauri/tests/: commands.rs  e2e.rs
src/__tests__/: AdvancedOptions.test.tsx  App.e2e.test.tsx  App.test.tsx  ErrorBoundary.test.tsx  FileDropZone.test.tsx  Header.test.tsx  HistoryView.test.tsx  LanguageSelect.test.tsx  LogPanel.test.tsx  OutputDirectory.test.tsx  QueueView.test.tsx  setup.ts  types.test.ts  useEventListener.test.ts  useFileManager.test.ts  useLogger.test.ts  useQueue.test.ts  utils.test.ts
src/components/: advanced-options.tsx  error-boundary.tsx  file-dropzone.tsx  header.tsx  history-view.tsx  language-select.tsx  left-panel.tsx  log-panel.tsx  output-directory.tsx  password-dialog.tsx  queue-view.tsx  right-panel.tsx
src/components/ui/: card.tsx  progress.tsx  radio-group.tsx  select.tsx  slider.tsx  spinner.tsx  switch.tsx  tabs.tsx  tooltip.tsx
src/hooks/: useEventListener.ts  useFileManager.ts  useGreeting.ts  useLogger.ts  useQueue.ts
src/types-gen/: BinarizationMode.ts  CompressionMode.ts  DeskewMode.ts  EnqueuePayload.ts  ExistingTextMode.ts  FileMetadata.ts  HistoryEntry.ts  Job.ts  JobStatus.ts  OcrOptions.ts  OcrSettings.ts  OutputType.ts  PageSegMode.ts  PipelineProgress.ts  PipelineStatus.ts  ProcessingConfigInput.ts  QueueState.ts  index.ts
