[package]
name = "knox"
version = "1.0.0-beta.1"
description = "Knox - PDFs desktop app"
authors = ["Jheyson Saavedra"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "knox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["ocr"]
ocr = ["tesseract-sys", "leptonica-sys"]
integration = ["ocr"]

[dependencies]
tauri = { version = "2", features = [] }

tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
num_cpus = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync", "time", "io-util"] }
rayon = "1"
lopdf = "0.33"
image = "0.25"
imageproc = "0.24"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
thiserror = "1"
tesseract-sys = { version = "0.6", optional = true }
leptonica-sys = { version = "0.4", optional = true }

flate2 = "1"
pdfluent-jbig2 = "0.2.2"
pdfluent-ccitt = "0.2"
fax = "0.2"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
pdfium-render = "0.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true
debug = 0

[dev-dependencies]
ab_glyph = "0.2"
tauri = { version = "2", features = ["test"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "preprocessing"
harness = false
